bg colors updated

--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
       text-align: center;
    }
    .left {
-      background-color: grey;
+      background-color: lightgrey;
    }
    .right {
-      background-color: grey;
+      background-color: lightgrey;
    }
    .center {
-      background-color: black;
+      background-color: beige;
    }
    .container:after {
       clear: both;
